--- a/Rezerve.Desktop/Rezerve.Desktop.csproj
+++ b/Rezerve.Desktop/Rezerve.Desktop.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DestekTalep.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DestekTalep.Designer.cs">
+      <DependentUpon>DestekTalep.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,8 +64,26 @@
     <Compile Include="Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
+    <Compile Include="MusteriEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MusteriEkle.Designer.cs">
+      <DependentUpon>MusteriEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OdaEkle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OdaEkle.Designer.cs">
+      <DependentUpon>OdaEkle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RezerveYap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RezerveYap.Designer.cs">
+      <DependentUpon>RezerveYap.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,6 +130,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\crearlogogratis_1024x1024_011.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\client-2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
